# edgeview

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  README.md
docs/prds/: prd-edgeview-v1-2026-03-09.md
src/: classify.rs  compact.rs  config.rs  html.rs  main.rs  model.rs  pipeline.rs  query.rs  sitemap.rs
src/svg/: chart.rs  layout.rs  mod.rs  sections.rs  theme.rs
