[package]
name = "edgeview"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data analysis
parquet = { version = "57", default-features = false, features = ["arrow", "async", "zstd", "flate2", "flate2-rust_backened"] }
futures = "0.3"
arrow = { version = "57", default-features = false }
rayon = "1.10"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

# AWS
aws-config = { version = "1", default-features = false, features = [
  "default-https-client",
  "behavior-version-latest",
  "rt-tokio",
  "sso",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
  "default-https-client",
  "behavior-version-latest",
  "rt-tokio",
] }

# Async runtime
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
] }

# CLI & Config
argh = { version = "0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing & Utils
regex = "1.10"
quick-xml = { version = "0.31", features = ["serialize"] }
anyhow = "1.0"
url = "2.5"
bytes = "1"

[dev-dependencies]
tempfile = "3.8"
